update code message analyzer

--- a/message-analyzer/.env.sample
+++ b/message-analyzer/.env.sample
@@ -1,7 +1,8 @@
-API_ID=
-API_HASH=
-SESSION_STRING=
-
-TELEGRAM_TIME_OFF_GROUP_ID=
-
 MONGODB_URI=
+OPENAI_API_KEY=
+BATCH_SIZE=10
+PROCESSING_INTERVAL=60000
+
+SYSTEM_PROMPT=
+
+EXAMPLE_1=
