using variable in .env as base64

--- a/message-analyzer/.env.sample
+++ b/message-analyzer/.env.sample
@@ -2,7 +2,5 @@ MONGODB_URI=
 OPENAI_API_KEY=
 BATCH_SIZE=10
 PROCESSING_INTERVAL=60000
-
-SYSTEM_PROMPT=
-
-EXAMPLE_1=
+SYSTEM_PROMPT_BASE64=
+EXAMPLES_BASE64=
