--- a/collector/.env.sample
+++ b/collector/.env.sample
@@ -1,9 +1,6 @@
-API_ID=
-API_HASH=
-SESSION_STRING=
-
-TELEGRAM_TIME_OFF_GROUP_ID=
-
-MONGODB_URI=
-
-TELEGRAM_EXCLUDED_GROUPS=
+MONGODB_URI=mongodb://localhost:27017/urcheckin
+API_URL=
+USER_ID=
+CHAT_ID=
+JWT_SECRET=
+POLL_INTERVAL=5000
