--- a/collector/Dockerfile
+++ b/collector/Dockerfile
@@ -6,5 +6,5 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
-
+RUN ls -la && ls -la models/
 CMD ["/bin/sh", "-c", ". /vault/secrets/env-config && npm start"]
