--- a/message-analyzer/package.json
+++ b/message-analyzer/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "mongoose": "^8.9.5",
     "openai": "^4.28.0"
