--- a/collector/package.json
+++ b/collector/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
-    "mongoose": "^8.1.1",
+    "flatted": "^3.3.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
     "winston": "^3.11.0",
     "winston-mongodb": "^5.1.1"
   }
